nav overflow fixed with fixed position

--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -11,6 +11,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  overflow-x: hidden;
 }
 
 /* Sections
@@ -21,6 +22,7 @@ html {
    */
 
 body {
+  overflow-x: hidden;
   margin: 0;
 }
 
